# Odin-Agent-Shell

./: .gitignore  AGENTS.md  CANON_ENTRY.md  CHANGELOG.md  CLAIM_BOUNDARY.md  CLAUDE.md  CODEX_START_HERE.md  DONATIONS.md  FILE_MANIFEST.json  LICENSE  LICENSE_POLICY.md  PROTOCOL_BOUNDARY.md  README.md  SECURITY.md  SPDX_POLICY.md  START_HERE.md  SYSTEM_MAP.json  THIRD_PARTY_NOTICES.md  THOR_ODIN_GPL2_ONLY_POLICY.md  pyproject.toml
dist_manifest/: README.md  portable_package_exclusions_v1.json  portable_package_manifest.example.json  portable_package_release_verification.example.json
docs/: ACCEPTANCE_TESTS_V7_1.md  AGENT_OPERATOR_MODE_V1.md  AGENT_PROOF_BOUNDARY_CLOSURE_V1.md  AGENT_TOOL_PERMISSION_BOUNDARY_V7_1.md  AI_GIT_SAFETY_ARCHITECTURE_V7_1.md  ALGORITHMS_V7_1.md  ANTI_FAIRY_DSL_V7_1.md  ANY_MODEL_ANY_AGENT_SAME_BOUNDARY_V7_1.md  AOT_CACHED_JIT_FALLBACK_V7_1.md  API_SPEC.md  APP_BRIDGE_AND_GOLDEN_APP_LOCK_V0_8_2.md  APP_INTEGRATION_STANDARD.md  APP_SEED_PACK_COMPILER_V7_1.md  AUTONOMY_ESCALATION_GATE_V7_1.md  BOUNDED_CODE_WORK.md  BROWSER_ODIN_HUB_SHELL_V1.md  BUG6_CHILDREN_FIRST_INVARIANT_V7_1.md  BUG6_Q7_SEED_CORE_SYNTHESIS_V7_1.md  BUILD_LADDER_ABSOLUTE_ALIGNMENT_LOCK_V7_1.md  CAPABILITY_SLICE_COMPILER_V7_1.md  CLAIM_BOUNDARY.md  CLAIM_SCANNER_PHRASE_REGISTRY_V1.md  CODEX_ANTI_DRIFT_POLICY.md  CODEX_BUILD_CONTRACT.md  CODEX_DIRECT_RUNTIME_RC_HANDOFF_V0_8_6.md  CODEX_PUBLIC_BUILD_READY_GATE_V7_1.md  CODEX_REAL_PR_HANDOFF_LADDER_LOCK_V0_8_7.md  CODEX_RUNTIME_CANDIDATE_HANDOFF_V0_8_0.md  CONSOLIDATED_PROOF_GOVERNANCE_GAP_CLOSURE_RELEASE_BOUNDARY_V1.md  (+185 more)
(+1991 files in other folders)
