[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "odin-agent-shell"
version = "1.0.0"
description = "Local-first candidate-work kernel for bounded AI coordination, receipt discipline, and app-owned apply workflows"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
odin = "odin.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["odin*", "odin_app_sdk*"]
exclude = [
    "sdk*",
    "windows*",
    "runtime*",
    "schemas*",
    "templates*",
    "registries*",
    "docs*",
    "tests*",
    "examples*",
]
